make nav sticky so that navigation is always possible

--- a/templates/MusicAnalyzer/Base.html
+++ b/templates/MusicAnalyzer/Base.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <header>
-    <div class="uk-position-top">
+    <div class="uk-position-top" id="masterNav">
             <nav class="uk-navbar-container uk-navbar-default" uk-navbar>
                 <div class="uk-navbar-left">
                     <ul class="uk-navbar-nav">
