--- a/MusicAnalyzer/static/css/distantAnalysis.css
+++ b/MusicAnalyzer/static/css/distantAnalysis.css
@@ -6,16 +6,31 @@ h2 {
     margin-bottom: 1em;
 }
 
-.uk-navbar-nav > li > a {
+.uk-navbar-right > li > a {
     color: black;
+    padding-right: 1em;
 }
 
 .rightNav {
     padding-bottom: 2em;
 }
 
-.uk-navbar-nav > li:hover > a, .uk-navbar-nav > li > a.uk-open, .uk-navbar-nav > li > a:focus {
+#stickyNav {
+    background-color: rgba(187,222,251,0.5)
+}
+
+.uk-navbar-right > li:hover > a, .uk-navbar-nav > li > a.uk-open, .uk-navbar-nav > li > a:focus {
     font-weight: 500;
+    text-decoration: none;
+    color: black;
+}
+
+#masterNav {
+    display: none;
+}
+
+.uk-navbar-right {
+    list-style: none;
     color: black;
 }
 
