--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -132,11 +132,18 @@
     <hr class="uk-divider-icon">
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="chords">
         <h2 class="uk-text-center">Chords</h2>
-        <h3 class="uk-text-center">Chord root count</h3>
-        <div class="ct-chart ct-perfect-fourth"></div>
-
-        <h3 class="uk-text-center">Chord quality count</h3>
-        <div class="ct-chart-quality ct-perfect-fourth"></div>
+        <div class="chart-container">
+            <h3 class="uk-text-center">Chord name count</h3>
+            <div class="ct-chart-name"></div>
+        </div>
+        <div class="chart-container">
+            <h3 class="uk-text-center">Chord root count</h3>
+            <div class="ct-chart-root"></div>
+        </div>
+        <div class="chart-container">
+            <h3 class="uk-text-center">Chord quality count</h3>
+            <div class="ct-chart-quality"></div>
+        </div>
     </div>
     <div id="pitches">
         <h2>Pitches</h2>
