show labels for chord names only on hover

--- a/MusicAnalyzer/static/css/distantAnalysis.css
+++ b/MusicAnalyzer/static/css/distantAnalysis.css
@@ -15,6 +15,21 @@ h2 {
     padding-bottom: 2em;
 }
 
+.ct-tooltip {
+    position: absolute;
+    display: inline-block;
+    min-width: 5em;
+    padding: 8px 10px;
+    background: #383838;
+    color: #fff;
+    text-align: center;
+    pointer-events: none;
+    z-index: 100;
+    transition: opacity .2s linear;
+
+
+}
+
 #stickyNav {
     background-color: rgba(187,222,251,0.5)
 }
@@ -31,6 +46,10 @@ h2 {
 
 #masterNav {
     display: none;
+}
+
+p {
+    padding: 1em;
 }
 
 .uk-navbar-right {
