add info to explanation and correct typos

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -164,7 +164,7 @@
         <h2 class="uk-text-center">Ambitus</h2>
         <div class="chart-container" id="rangeCharts">
             <h3 class="uk-text-center">Range between highest and lowest pitch by group</h3>
-            <p class="uk-text-center">Please hover over the bars to few more detailed information.</p>
+            <p class="uk-text-center">Please hover over the bars to view more detailed information.</p>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Boxplots of ambitus semitones</h3>
