--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -61,7 +61,14 @@
                         visualizations</a>
                     <div class="uk-accordion-content">
                         {% if  explanations %}
+
                             <div  uk-grid>
+                            <div class="uk-width-3-3">
+                                    <div class="uk-card uk-card-default uk-card-body">
+                                        <h2 class="uk-card-title">General</h2>
+                                        {{ explanations.general }}
+                                    </div>
+                                </div>
                                 <div class="uk-width-1-3">
                                     <div class="uk-card uk-card-default uk-card-body">
                                         <h2 class="uk-card-title">Chords</h2>
