add better tooltips and add scrolling to long diagrams

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -146,9 +146,10 @@
         <h2 class="uk-text-center">Chords</h2>
         <div class="chart-container" id="chartChordNames">
             <h3 class="uk-text-center">Chord name count</h3>
-            <p class="uk-text-center">Please hover over the bars to view the chord names and their corresponding
-                occurrences. Note, that only the chords with more than three occurrences are displayed.</p>
-            <div class="ct-chart-name"></div>
+            <div id="any-div-anywhere"></div>
+            <div class="uk-width-1-1" id="chordChartName">
+                <div class="ct-chart-name"></div>
+            </div>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord root count</h3>
@@ -173,6 +174,7 @@
 
         <div class="chart-container">
             <h3 class="uk-text-center">Pitch name with octave count</h3>
+            <div id="any-div-anywhere2"></div>
             <div class="uk-width-1-1" id="pitchOctaveName">
                 <div class="ct-chart-pitch-octave-name"></div>
             </div>
