add metadata to table by javascript

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -105,7 +105,7 @@
             <li>
                 <a class="uk-accordion-title uk-text-center" href="#">Click to view the analyzed music pieces</a>
                 <div class="uk-accordion-content">
-                    <table class="uk-table uk-table-middle uk-table-divider">
+                    <table id="metadata_table" class="uk-table uk-table-middle uk-table-divider">
                         <thead>
                         <tr>
                             <th>group</th>
