--- a/MusicAnalyzer/static/css/distantAnalysis.css
+++ b/MusicAnalyzer/static/css/distantAnalysis.css
@@ -115,6 +115,11 @@ h3 {
     text-align: center;
 }
 
+.intro {
+    font-size: 1em;
+    padding-bottom: 2em;
+}
+
 .ct-legend li {
     position: relative;
     padding-left: 23px;
