--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -55,20 +55,15 @@
     <h2 class="uk-text-center">Distant Analysis</h2>
     <div id="overview">
         <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m">
+          <h4 class="uk-text-center intro">{{ explanations.general }}</h4>
             <ul uk-accordion>
                 <li>
-                    <a class="uk-accordion-title uk-text-center" href="#">Click to few explanations concerning the
+                    <a class="uk-accordion-title uk-text-center" href="#">Click to few more detailed explanations concerning the
                         visualizations</a>
                     <div class="uk-accordion-content">
                         {% if  explanations %}
 
                             <div uk-grid>
-                                <div class="uk-width-3-3">
-                                    <div class="uk-card uk-card-default uk-card-body">
-                                        <h2 class="uk-card-title">General</h2>
-                                        {{ explanations.general }}
-                                    </div>
-                                </div>
                                 <div class="uk-width-1-3">
                                     <div class="uk-card uk-card-default uk-card-body">
                                         <h2 class="uk-card-title">Chords</h2>
@@ -184,8 +179,9 @@
     <div id="durations">
         <h2>Durations</h2>
     </div>
-    <div id="key">
-        <h2>Key</h2>
+     <hr class="uk-divider-icon">
+    <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="key">
+        <h2 class="uk-text-center">Key</h2>
     </div>
     <hr class="uk-divider-icon">
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="ambitus">
