--- a/MusicAnalyzer/static/css/distantAnalysis.css
+++ b/MusicAnalyzer/static/css/distantAnalysis.css
@@ -41,6 +41,9 @@ h2 {
     width: 3000px;
 }
 
+.chartist-tooltip {
+    display: none;
+}
 .tooltip-show{
     position: absolute;
     display: inline-block;
