add multiple key probability charts

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -192,9 +192,8 @@
             <h3 class="uk-text-center">Key mode count</h3>
             <div class="ct-chart-key-mode"></div>
         </div>
-        <div class="chart-container">
+        <div class="chart-container" id="probabilityCharts">
             <h3 class="uk-text-center">Key probabilities per music piece and group</h3>
-            <div class="ct-chart-key-probability"></div>
         </div>
     </div>
     <hr class="uk-divider-icon">
