add duration charts

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -177,8 +177,29 @@
         </div>
 
     </div>
-    <div id="durations">
-        <h2>Durations</h2>
+    <hr class="uk-divider-icon">
+    <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="durations">
+        <h2 class="uk-text-center">Durations</h2>
+        <div class="chart-container">
+            <h3 class="uk-text-center">Duration name notes count</h3>
+            <div class="ct-chart-duration-fullname-notes-count"></div>
+        </div>
+        <div class="chart-container">
+            <h3 class="uk-text-center">Duration name rests count</h3>
+            <div class="ct-chart-duration-fullname-rests-count"></div>
+        </div>
+        <div class="chart-container">
+            <h3 class="uk-text-center">Duration length in quarters notes count</h3>
+            <div class="ct-chart-duration-length-notes-count"></div>
+        </div>
+        <div class="chart-container">
+            <h3 class="uk-text-center">Duration length in quarters notes rests count</h3>
+            <div class="ct-chart-duration-length-notes-rests-count"></div>
+        </div>
+        <div class="chart-container">
+            <h3 class="uk-text-center">Duration length in quarters rests count</h3>
+            <div class="ct-chart-duration-length-rests-count"></div>
+        </div>
     </div>
 
     <hr class="uk-divider-icon">
