add durations explanation text

--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -58,7 +58,7 @@
             <h4 class="uk-text-center intro">{{ explanations.general }}</h4>
             <ul uk-accordion>
                 <li>
-                    <a class="uk-accordion-title uk-text-center" href="#">Click to few more detailed explanations
+                    <a class="uk-accordion-title uk-text-center" href="#">Click to view more detailed explanations
                         concerning the
                         visualizations</a>
                     <div class="uk-accordion-content">
