--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -133,7 +133,7 @@
         <h2 class="uk-text-center">Chords</h2>
         <div class="chart-container" id="chartChordNames">
             <h3 class="uk-text-center">Chord name count</h3>
-            <div id="any-div-anywhere"></div>
+            <div id="tooltip-div1"></div>
             <div class="uk-width-1-1" id="chordChartName">
                 <div class="ct-chart-name"></div>
             </div>
@@ -161,7 +161,7 @@
 
         <div class="chart-container">
             <h3 class="uk-text-center">Pitch name with octave count</h3>
-            <div id="any-div-anywhere2"></div>
+            <div id="tooltip-div2"></div>
             <div class="uk-width-1-1" id="pitchOctaveName">
                 <div class="ct-chart-pitch-octave-name"></div>
             </div>
