--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -16,15 +16,17 @@
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartist-plugin-tooltips@0.0.17/dist/chartist-plugin-tooltip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.js"></script>
+
+    <script src="{% static "js/download_graphs.js" %}"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="{% static 'js/distant_analysis.js' %}"></script>
     <script>
-    var path_to_chart_worker = "{% static "js/chart_worker.js" %}";
-    var path_to_boxplot_worker = "{% static "js/boxplot_worker.js" %}";
-    var path_to_key_probability_worker = "{% static "js/key_probability_chart_worker.js" %}";
-    var path_to_ambitus_chart_worker = "{% static "js/ambitus_chart_worker.js" %}"
+        var path_to_chart_worker = "{% static "js/chart_worker.js" %}";
+        var path_to_boxplot_worker = "{% static "js/boxplot_worker.js" %}";
+        var path_to_key_probability_worker = "{% static "js/key_probability_chart_worker.js" %}";
+        var path_to_ambitus_chart_worker = "{% static "js/ambitus_chart_worker.js" %}"
 
     </script>
 {% endblock %}
@@ -143,7 +145,10 @@
             <div id="tooltip-div1"></div>
             <div class="uk-width-1-1" id="chordChartName">
                 <div class="ct-chart-name"></div>
+                <button type="button" class="rasterCanvas" onclick="exportToCanvas('ct-chart-name');">Download this chart</button>
+                <canvas class="downloadCanvas"></canvas>
             </div>
+
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord root count</h3>
