--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -145,8 +145,8 @@
             <div id="tooltip-div1"></div>
             <div class="uk-width-1-1" id="chordChartName">
                 <div class="ct-chart-name"></div>
-                <button type="button" class="rasterCanvas" onclick="exportToCanvas('ct-chart-name');">Download this chart</button>
-                <canvas class="downloadCanvas"></canvas>
+                <button type="button" class="rasterCanvas" onclick="saveSvgAsPng(document.querySelector('.ct-chart-name svg'), 'romanNumeralChart.png');">Download this chart</button>
+                <!--<canvas class="downloadCanvas"></canvas>-->
             </div>
 
         </div>
