--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -145,18 +145,20 @@
             <div id="tooltip-div1"></div>
             <div class="uk-width-1-1" id="chordChartName">
                 <div class="ct-chart-name"></div>
-                <button type="button" class="rasterCanvas" onclick="saveSvgAsPng(document.querySelector('.ct-chart-name svg'), 'romanNumeralChart.png');">Download this chart</button>
-                <!--<canvas class="downloadCanvas"></canvas>-->
+
             </div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
 
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord root count</h3>
             <div class="ct-chart-root"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord quality count</h3>
             <div class="ct-chart-quality"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
     </div>
     <hr class="uk-divider-icon">
@@ -165,10 +167,12 @@
         <div class="chart-container">
             <h3 class="uk-text-center">Pitch name count</h3>
             <div class="ct-chart-pitch-name"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Pitch octave count</h3>
             <div class="ct-chart-pitch-octave"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
 
         <div class="chart-container">
@@ -176,6 +180,7 @@
             <div id="tooltip-div2"></div>
             <div class="uk-width-1-1" id="pitchOctaveName">
                 <div class="ct-chart-pitch-octave-name"></div>
+                <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
             </div>
         </div>
 
@@ -186,26 +191,32 @@
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of notes - count by name</h3>
             <div class="ct-chart-duration-fullname-notes-count"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of rests - count by name</h3>
             <div class="ct-chart-duration-fullname-rests-count"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of notes - count by value [length in quarters]</h3>
             <div class="ct-chart-duration-length-notes-count"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of rests - count by value [length in quarters]</h3>
             <div class="ct-chart-duration-length-rests-count"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of rests and notes - count by value [length in quarters]</h3>
             <div class="ct-chart-duration-length-notes-rests-count"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Sound to silence ratio</h3>
             <div class="ct-chart-sound_silence_ratio"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
     </div>
 
@@ -215,10 +226,12 @@
         <div class="chart-container">
             <h3 class="uk-text-center">Key name count</h3>
             <div class="ct-chart-key-name"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Key mode count</h3>
             <div class="ct-chart-key-mode"></div>
+            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
         </div>
         <div class="chart-container" id="probabilityCharts">
             <h3 class="uk-text-center">Key probabilities per music piece and group</h3>
