--- a/templates/MusicAnalyzer/DistantAnalysis.html
+++ b/templates/MusicAnalyzer/DistantAnalysis.html
@@ -10,6 +10,7 @@
     {# fontawesome for icons #}
     <link rel="stylesheet" type="text/css" href="{% static "/css/distantAnalysis.css" %}"/>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="{% static "js/SVG2Bitmap.min.js" %}"></script>
     <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartist-plugin-legend@0.6.2/chartist-plugin-legend.min.js"></script>
     <script src='https://cdn.jsdelivr.net/lodash/4.17.2/lodash.min.js'></script>
@@ -147,18 +148,18 @@
                 <div class="ct-chart-name"></div>
 
             </div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
 
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord root count</h3>
             <div class="ct-chart-root"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Chord quality count</h3>
             <div class="ct-chart-quality"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
     </div>
     <hr class="uk-divider-icon">
@@ -167,7 +168,7 @@
         <div class="chart-container">
             <h3 class="uk-text-center">Pitch name count</h3>
             <div class="ct-chart-pitch-name"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Pitch octave count</h3>
@@ -180,7 +181,7 @@
             <div id="tooltip-div2"></div>
             <div class="uk-width-1-1" id="pitchOctaveName">
                 <div class="ct-chart-pitch-octave-name"></div>
-                <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+                <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
             </div>
         </div>
 
@@ -191,32 +192,32 @@
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of notes - count by name</h3>
             <div class="ct-chart-duration-fullname-notes-count"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of rests - count by name</h3>
             <div class="ct-chart-duration-fullname-rests-count"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of notes - count by value [length in quarters]</h3>
             <div class="ct-chart-duration-length-notes-count"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of rests - count by value [length in quarters]</h3>
             <div class="ct-chart-duration-length-rests-count"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Duration of rests and notes - count by value [length in quarters]</h3>
             <div class="ct-chart-duration-length-notes-rests-count"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Sound to silence ratio</h3>
             <div class="ct-chart-sound_silence_ratio"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
     </div>
 
@@ -226,16 +227,17 @@
         <div class="chart-container">
             <h3 class="uk-text-center">Key name count</h3>
             <div class="ct-chart-key-name"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container">
             <h3 class="uk-text-center">Key mode count</h3>
             <div class="ct-chart-key-mode"></div>
-            <button type="button" class="uk-button uk-button-default uk-align-center">Download this chart</button>
+            <button type="button" class="uk-button uk-button-default uk-align-center downloadButton">Download this chart</button>
         </div>
         <div class="chart-container" id="probabilityCharts">
             <h3 class="uk-text-center">Key probabilities per music piece and group</h3>
         </div>
+
     </div>
     <hr class="uk-divider-icon">
     <div class="space-m uk-align-center uk-width-1-1 uk-width-3-4@m" id="ambitus">
